--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -9,6 +9,7 @@
     justify-content: center;
     align-items: center;
     color: #ffffff;
+    border:none;
     text-transform: uppercase;
     cursor: pointer;
     &_main {
