--- a/src/sass/blocks/_search.scss
+++ b/src/sass/blocks/_search.scss
@@ -1,30 +1,44 @@
 .search {
-  &__form{
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-    margin-top: 20px;
+  &__form {
+    padding: 50px;
+    position: fixed; top: 50%; left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+
+    width: 759px;
+    height: 65px;
+    top: 50px;
+    border: 1px solid $frameСolor;
+    padding: 10px;
+    border-radius: 15px; 
     background:none;
+    
+  }
+  &__wrapper {
+    display: grid;
+    grid-template-columns: 27px 569px 56px;
+    grid-template-rows: 50px;
+    grid-gap: 20px;
+    align-items: center;
   }
   &__input {
-      position: absolute;
-      width: 759px;
-      height: 65px;
-      top: 50px;
-      border: 1px solid $frameСolor;
-      padding: 10px;
-      border-radius: 15px;    
-    }
-    &__icon {
-      display: display;
-      // align-items: ;
-      margin-left: 10px;
-    }
-    &__icon img {
-      width: 20px;
-      height: 20px;
-      margin-left: 5px;
-    }
+    width: 569px;
+    height: 64px; 
+    border: none;
+    outline: 0;
+    outline-offset: 0;
+    background: none;        
+  }
+  &__icon {
+    display: block;
+    align-items: center;
+  }
+  &__avatar {
+    display: block;
+    align-items: center;
+  }
+   
 }
   
   
