--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -36,9 +36,11 @@
 @import 'blocks/buttons';
 @import 'blocks/titles';
 @import 'blocks/logo';
+@import 'blocks/post';
 
 
 
 
 @import 'pages/index';
 @import 'pages/home';
+@import 'pages/account';
