--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -3,28 +3,28 @@
     font-size: 30px;
     font-weight: 700;
     text-align: right;
-    &_fs12{
+    &__fs12{
         font-size: 12px;
         font-weight:400;
     }
-    &_fs14 {
+    &__fs14 {
         font-size: 14px;
         font-weight:400;
         
     }
-    &_fs16 {
+    &__fs16 {
         font-size: 18px;
         font-weight: 500;
     }
-    &_fs18regular {
+    &__fs18regular {
         font-size: 18px;
         font-weight:400;
     }
-    &_fs20bold {
+    &__fs20bold {
         font-size: 18px;
         font-weight:800;
     }
-    &_fs32exbold{
+    &__fs32exbold{
         font-size: 18px;
         font-weight:800;
     }
