--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -12,7 +12,8 @@
     border:none;
     text-transform: uppercase;
     cursor: pointer;
-    &_main {
+    
+    &__main {
         margin-top: 15px;
         width: 325px;
         height: 50px;
@@ -20,14 +21,14 @@
         font-weight:800;
         text-decoration: none;
     }
-    &_submit {
+    &__submit {
         width: 100%;
         height: 55px;
         color:#ffffff;
         font-size: 16px;
         text-decoration: none;
     }
-    &_mini{
+    &__mini{
         width: 131px;
         height: 40px;
         background-repeat: 5px;
