--- a/src/sass/pages/_index.scss
+++ b/src/sass/pages/_index.scss
@@ -11,9 +11,7 @@
 
 .index{
     &__logo{
-         background: none;
-        margin-top:42px ;
-        // position: absolute;
+         background: none;       
         left: 95px;
         width: 589px;
         height: 388px;
@@ -37,9 +35,26 @@
     justify-content: space-between;
     flex-direction: column;
 }
+    &__btn a{
+        text-decoration: none;
+        color: #fff;
+    }
+    &__socialbtn{
+        display: flex;      
+        align-items: left;
+        flex-direction: column;
+        margin-left: 20px;        
+    }
+    &__socialbtn a{
+        text-decoration: none;
+        color: $textColor;
+    }
+    
+    
 }
 
-.social_btn {
+.social {
+    &__btn {
     margin-top: 10px;
     width: 285px;
     height: 40px;
@@ -49,8 +64,6 @@
     justify-content: center;
     align-items: center;
     cursor: pointer; 
-    // &__img{
-       
-        
-    // }
+    }
+    
 }
