--- a/src/sass/blocks/_buttons.scss
+++ b/src/sass/blocks/_buttons.scss
@@ -29,14 +29,16 @@
         text-decoration: none;
     }
     &__mini{
-        width: 131px;
-        height: 40px;
+        width: 200px;
+        height: 35px;
         background-repeat: 5px;
-        font-size: 14px;
+        font-size: 16px;
+        font-weight: 600;
         text-decoration: none;
     }
     
 
 }
+
 
 
