--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
 @import 'libs/bootstrap-reboot.min';
+
 @import url('https://fonts.googleapis.com/css2?family=Mulish:wght@200;400;500;600;700;800;900&display=swap');
 
 
@@ -38,10 +39,8 @@
 @import 'blocks/header';
 
 
-
-
-
 @import 'pages/index';
 @import 'pages/home';
 @import 'pages/account';
 @import 'pages/setting';
+@import 'pages/trips';
