выполнена  верстка модальных окон, добавлен скрипт

--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -20,6 +20,14 @@
         font-size: 18px;
         font-weight:400;
     }
+    &__fs18medium{
+        font-size: 18px;
+        font-weight:600;
+    }
+    &__fs18exbold {
+        font-size: 18px;
+        font-weight:800;
+    }
     &__fs20bold {
         font-size: 18px;
         font-weight:800;
