--- a/src/sass/modal/_modal.scss
+++ b/src/sass/modal/_modal.scss
@@ -1,11 +1,11 @@
 .modal {
     display: none;
     position: fixed;
-    z-index: 1;
+    z-index: 2;
     top: 50%;
     left: 50%;
-    max-width: 598px;
-    max-height: 710px;
+    max-width: 600px;
+    max-height: 700px;
     transform: translate(-50%, -50%);
     background-color: #fff;
     overflow: auto;
@@ -15,7 +15,6 @@
     text-align: center;
   }
   &__img{
-   
     display: flex;
     width: 538px;
     height: 237px;
@@ -73,7 +72,7 @@
   z-index: 1;
   top: 50%;
   left: 50%;
-  max-width: 598px;
+  width: 600px;
   height: 700px;
   transform: translate(-50%, -50%);
   padding: 20px;
@@ -83,9 +82,20 @@
   &__contents {
       text-align: center;
     }
+   
+    
+}
+
+.button__center{
+  margin-top: 50px;
+  position: relative; top: 50%; left: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
 }
 
 .close {
+  display: inline;
 color: $primaryColor;
 float: right;
 font-size: 40px;
