add modal index

--- a/src/sass/pages/_index.scss
+++ b/src/sass/pages/_index.scss
@@ -23,6 +23,7 @@
     justify-content: space-between;
     align-items: left;
     flex-direction: column; 
+    color: $textColor;
     }
     &__win{
     width: 325px;
