--- a/src/sass/modal/_modal.scss
+++ b/src/sass/modal/_modal.scss
@@ -4,8 +4,8 @@
     z-index: 2;
     top: 50%;
     left: 50%;
-    max-width: 600px;
-    max-height: 700px;
+    width: 600px;
+    height: 700px;
     transform: translate(-50%, -50%);
     background-color: #fff;
     overflow: auto;
