--- a/src/sass/modal/_modal.scss
+++ b/src/sass/modal/_modal.scss
@@ -1,39 +1,40 @@
 .modal {
-    display: none;
-    position: fixed;
-    z-index: 9999;
-    top: 50%;
-    left: 50%;
-    width: 600px;
-    height: 700px;
-    transform: translate(-50%, -50%);
     background-color: #fff;
-    overflow: auto;
+    width: 500px;
+    height: 600px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    display: none;
     padding: 20px;
     border: 1px solid $frameСolor;
+    z-index: 9999;
   &__contents {
     text-align: center;
   }
   &__img{
-    display: flex;
-    width: 538px;
-    height: 237px;
-    justify-content: center;
-    align-items: center;
-    flex-shrink: 0;
+    padding: 5px;
+    display: block;
+    max-width: 450px;
+    height: 180px;
     border-radius: 10px;
     border: 2px solid $textColor;
+    padding: 5px;
+    margin: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    
   }
   &__noteName{
-    margin:  10px;
+    margin:  5px;
     padding: 5px;
-    width: 515px;
+    width: 450px;
     height: 35px;
     border-radius: 10px;
     border: 2px solid $textColor;
   }
   &__noteCoordinates{
-    margin: 0 10px 0 10px;
+    margin: 5px;
     padding: 5px;
     width: 240px;
     height: 35px;
@@ -46,8 +47,8 @@
     background: rgba(196, 196, 196, 0.00);
   }
   &__note{
-    margin: 10px;
-    width: 515px;
+    margin: 5px;
+    width: 450px;
     height: 183px;
     padding: 5px;
     flex-shrink: 0;
@@ -66,7 +67,7 @@
   
 }
 
-.modalMap {
+.Map {
   display: none;
   position: fixed;
   z-index: 1;
@@ -87,38 +88,78 @@
 }
 
 .button__center{
-  margin-top: 50px;
+  margin-top: 30px;
   position: relative; top: 50%; left: 50%;
   -webkit-transform: translate(-50%, -50%);
   -ms-transform: translate(-50%, -50%);
   transform: translate(-50%, -50%);
 }
 
-.close {
-  display: inline;
-color: $primaryColor;
-float: right;
-font-size: 40px;
-font-weight: bold;
-background:none;
-}
+// .close {
+//   display: inline;
+// color: $primaryColor;
+// float: right;
+// font-size: 40px;
+// font-weight: bold;
+// background:none;
+// }
 
-.close:hover,
-.close:focus {
-color: $frameСolor;
-text-decoration: none;
-cursor: pointer;
-}
+// .close:hover,
+// .close:focus {
+// color: $frameСolor;
+// text-decoration: none;
+// cursor: pointer;
+// }
 
-.close {
-  position: absolute;
-  top: 10px;
-  right: 10px;
-  font-size: 40px;
-  cursor: pointer;
+// .close {
+//   position: absolute;
+//   top: 10px;
+//   right: 10px;
+//   font-size: 40px;
+//   cursor: pointer;
   
+// }
+
+
+.modal-overlay {
+	position: fixed;
+	left: 0;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	background-color: rgba(0, 0, 0, 0.7);
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	height: 100vh;
+	width: 100%;
+	opacity: 0;
+	visibility: hidden;
+	transition: all 0.3s ease-in-out;
+  z-index: 999;
 }
 
+// .modal {
+// 	background-color: #fff;
+// 	width: 500px;
+// 	height: 600px;
+// 	display: flex;
+// 	align-items: center;
+// 	justify-content: center;
+// 	display: none;
+//   padding: 20px;
+//   border: 1px solid $frameСolor;
+// }
+
+.modal-overlay--visible {
+	opacity: 1;
+	visibility: visible;
+	transition: all 0.3s ease-in-out;
+}
+
+.modal--visible {
+	display: block;
+}
 
 
      
