--- a/src/sass/modal/_modalIndex.scss
+++ b/src/sass/modal/_modalIndex.scss
@@ -1,204 +1,82 @@
-// .md-perspective,
-// .md-perspective body {
-// 	height: 100%;
-// 	overflow: hidden;
-// }
-
-// .md-perspective body  {
-// 	background: #222;
-// 	-webkit-perspective: 600px;
-// 	-moz-perspective: 600px;
-// 	perspective: 600px;
-// }
-
-// .container {
-// 	background: #ffffff;
-// 	min-height: 100%;
-// }
-
-// .md-modal {
-// 	position: fixed;
-// 	top: 50%;
-// 	left: 50%;
-// 	width: 50%;
-// 	max-width: 500px;
-//     min-height: 700px;
-// 	min-width: 320px;
-// 	z-index: 2000;
-// 	visibility: hidden;
-// 	-webkit-backface-visibility: hidden;
-// 	-moz-backface-visibility: hidden;
-// 	backface-visibility: hidden;
-// 	-webkit-transform: translateX(-50%) translateY(-50%);
-// 	-moz-transform: translateX(-50%) translateY(-50%);
-// 	-ms-transform: translateX(-50%) translateY(-50%);
-// 	transform: translateX(-50%) translateY(-50%);
-// }
-
-// .md-show {
-// 	visibility: visible;
-// }
-
-// .md-overlay {
-// 	position: fixed;
-// 	width: 100%;
-// 	height: 100%;
-// 	visibility: hidden;
-// 	top: 0;
-// 	left: 0;
-// 	z-index: 1000;
-// 	opacity: 0;
-// 	background: rgba(255, 255, 255, 0.8);
-// 	-webkit-transition: all 0.3s;
-// 	-moz-transition: all 0.3s;
-// 	transition: all 0.3s;
-// }
-
-// .md-show ~ .md-overlay {
-// 	opacity: 1;
-// 	visibility: visible;
-// }
+.modalIndex {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    // background-color: #f1f1f1;
+    // padding: 16px;
+    // border: 1px solid #ccc;
 
 
-// .md-content h3 {
-// 	margin: 0;
-// 	padding: 0.4em;
-// 	text-align: center;
-// 	font-size: 2.4em;
-// 	font-weight: 300;
-// 	opacity: 0.8;
-// 	background: rgba(255, 255, 255, 0.1);
-// 	border-radius: 3px 3px 0 0;
-// }
+    background-color: #fff;
+    width: 450px;
+    height: 600px;
+    padding: 20px;
+    border: 1px solid $frameСolor;
+    z-index: 9999;
+    &__content{
+      margin-top: 20px;
+      display: flex;
+        justify-content: space-between;
+        flex-direction: column;
+        
+      gap: 10px;
+      // text-transform: uppercase;
+     
+    }
+    
+    &__modalWin{
+      width: 330px;
+      height: 50px;
+      border-radius: 10px;
+      border-color:$frameСolor;
+      border-radius: 10px;
+      border: 1px solid #AFB1B6;
+      background: rgba(44, 32, 32, 0);
 
-// .md-content > div {
-// 	padding: 15px 40px 30px;
-// 	margin: 0;
-// 	font-weight: 300;
-// 	font-size: 1.15em;
-// }
+      margin-left: auto;
+      margin-right: auto;
 
-// .md-content > div p {
-// 	margin: 0;
-// 	padding: 10px 0;
-// }
-
-// .md-content > div ul {
-// 	margin: 0;
-// 	padding: 0 0 30px 20px;
-// }
-
-// .md-content > div ul li {
-// 	padding: 5px 0;
-// }
-
-// .md-content button {
-// 	display: block;
-// 	margin: 0 auto;
-// 	font-size: 0.8em;
-// }
-
-// .close {
-//     display: inline;
-//   color: $primaryColor;
-//   float: right;
-//   font-size: 40px;
-//   font-weight: bold;
-//   background:none;
-//   }
-  
-//   .close:hover,
-//   .close:focus {
-//   color: $frameСolor;
-//   text-decoration: none;
-//   cursor: pointer;
-//   }
-//   .close {
-//     position: absolute;
-//     top: 10px;
-//     right: 10px;
-//     font-size: 40px;
-//     cursor: pointer; 
-//   }
-  
+    }
+    &__btn{
+      margin-top: 10px;
+      width: 325px;
+      height: 40px;
+      border: 2px solid $frameСolor ;
+      border-radius: 10px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer; 
+    }&__minititle{
+      float: left;
+      margin-left: 40px;
+    }&__button{
+      margin-top: 20px;
+    }&__checkbox{
+      margin-top: 3px;
+      height: 20px;
+      width: 20px;
+    }&__modalTwo{
+      margin-top: 5px;
+      display: grid;
+      gap: 20px;
+      justify-content: center;
+      margin-bottom: 100px;
+    
+    }
+    
+  }
   
 
+  
 
-// /* Effect 16:  Blur */
-// .md-show.md-effect-16 ~ .md-overlay {
-// 	background: rgba(53, 53, 53, 0.5);
-// }
-
-// .md-show.md-effect-16 ~ .container {
-// 	-webkit-filter: blur(3px);
-// 	-moz-filter: blur(3px);
-// 	filter: blur(3px);
-// }
-
-// .md-effect-16 .md-content {
-// 	-webkit-transform: translateY(-5%);
-// 	-moz-transform: translateY(-5%);
-// 	-ms-transform: translateY(-5%);
-// 	transform: translateY(-5%);
-// 	opacity: 0;
-// }
-
-// .md-show.md-effect-16 ~ .container,
-// .md-effect-16 .md-content {
-// 	-webkit-transition: all 0.3s;
-// 	-moz-transition: all 0.3s;
-// 	transition: all 0.3s;
-// }
-
-// .md-show.md-effect-16 .md-content {
-// 	-webkit-transform: translateY(0);
-// 	-moz-transform: translateY(0);
-// 	-ms-transform: translateY(0);
-// 	transform: translateY(0);
-// 	opacity: 1;
-// }
+ 
 
 
-// @-webkit-keyframes OpenTop {
-// 	50% { 
-// 		-webkit-transform: rotateX(10deg); 
-// 		-webkit-animation-timing-function: ease-out; 
-// 	}
-// }
+  .modalIndex.visible {
+    display: block;
+  }
 
-// @-moz-keyframes OpenTop {
-// 	50% { 
-// 		-moz-transform: rotateX(10deg); 
-// 		-moz-animation-timing-function: ease-out; 
-// 	}
-// }
 
-// @keyframes OpenTop {
-// 	50% { 
-// 		transform: rotateX(10deg); 
-// 		animation-timing-function: ease-out; 
-// 	}
-// }
-
-// .md-effect-19 .md-content {
-// 	-webkit-transform: translateY(-200%);
-// 	-moz-transform: translateY(-200%);
-// 	-ms-transform: translateY(-200%);
-// 	transform: translateY(-200%);
-// 	opacity: 0;
-// }
-
-// .md-show.md-effect-19 .md-content {
-// 	-webkit-transform: translateY(0);
-// 	-moz-transform: translateY(0);
-// 	-ms-transform: translateY(0);
-// 	transform: translateY(0);
-// 	opacity: 1;
-// 	-webkit-transition: all 0.5s 0.1s;
-// 	-moz-transition: all 0.5s 0.1s;
-// 	transition: all 0.5s 0.1s;
-// }
-
-// @media screen and (max-width: 32em) {
-// 	body { font-size: 75%; }
-// }
