--- a/src/sass/pages/_account.scss
+++ b/src/sass/pages/_account.scss
@@ -1,5 +1,5 @@
 .accaunt{
-    display: inline;
+    
     &__container{
         width: 520px;
         height: 320px;
@@ -41,7 +41,7 @@
         color: $textColor;
     }
     &__buttons{
-        margin-top: 10px;
+        margin: 10px;
         grid-template-columns: 200px 200px;
         justify-content: center;
         grid-gap: 40px;
@@ -74,7 +74,7 @@
 }
 
 .line{
-    margin-top: 50px;
+    margin-top: 60px;
     width: 475px;
     height: 1px;
     background: #EFEFF0;
